updated all bundles to synch with english.

--- a/lib/messagebundles/MessagesBundle_hu.properties
+++ b/lib/messagebundles/MessagesBundle_hu.properties
@@ -647,6 +647,8 @@ SEARCH_WHATSNEW_HIDE_ADULT=Feln\u0151tt tartalom kisz\u0171r\u00e9se
 #? SEARCH_FILTER_RESULTS=
 #### SEARCH_BACK_TO_SEARCH=Back To Search
 #? SEARCH_BACK_TO_SEARCH=
+#### SEARCH_BLOCK_HOST=Do you want to block search results from the host at
+#? SEARCH_BLOCK_HOST=
 
 #Media Types
 #### MEDIA_ANY_TYPE=Any Type
@@ -1298,7 +1300,6 @@ INIT_SAVE_DEFAULT_BUTTON_TIP=Haszn\u00e1lja az alap\u00e9rtelmezett k\u00f6nyvt\
 PRO_TITLE=Upgrade a PRO v\u00e1ltozatra
 #### PRO_LABEL_THANKS=For TURBOcharged downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
 PRO_LABEL_THANKS=K\u00f6sz\u00f6nj\u00fck, hogy a h\u00e1l\u00f3n a LimetWire programot futtatja. K\u00e9rj\u00fck t\u00e9rjen \u00e1t a LimeWire PRO programra a LimeWire \u00e9s a h\u00e1l\u00f3zat fejleszt\u00e9se \u00e9rdek\u00e9ben.
-
 #### PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 PRO_LABEL_QUESTION=\u00c1tt\u00e9r a LimeWire PRO programra?
 #### GO_PRO_TIP=Get LimeWire PRO Now
@@ -1311,6 +1312,16 @@ WHYGOPRO_TIP=Mit ad a PRO nekem?
 GO_PRO_LATER=K\u00e9s\u0151bb
 #### GO_PRO_LATER_TIP=Get LimeWire PRO Later
 GO_PRO_LATER_TIP=LimeWire PRO let\u00f6lt\u00e9s k\u00e9s\u0151bb.
+
+################################################################################
+# Key/Value pairs for the upgrade java window.
+################################################################################
+#### JAVA_UPGRADE_TITLE=Upgrade Your Java
+#? JAVA_UPGRADE_TITLE=
+#### JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java.  LimeWire looks and acts much better with newer versions of Java.  Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
+#? JAVA_UPGRADE_MESSAGE=
+#### JAVA_UPGRADE_QUESTION=Would you like to get your free Java upgrade?
+#? JAVA_UPGRADE_QUESTION=
 
 ###################################################################
 # Key/value pairs for XML
@@ -1949,6 +1960,8 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Orsz\u00e1g
 # Key/value pairs for the save directory options window item
 # in the options window
 ################################################################################
+#### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings.  Would you like to save these changes?
+#? OPTIONS_SAVE_ON_CLOSE=
 #### OPTIONS_SAVE_DIR_TITLE=Save Directory
 OPTIONS_SAVE_DIR_TITLE=Ment\u00e9s k\u00f6nyvt\u00e1ra
 #### OPTIONS_SAVE_DIR_LABEL=You can choose the directory for saving files.
