--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -647,6 +647,8 @@ SEARCH_SELECT_TYPE=\u7a2e\u985e\u3092\u9078\u629e\uff1a
 SEARCH_FILTER_RESULTS=\u7d50\u679c\u3092\u30d5\u30a1\u30eb\u30bf\uff1a
 #### SEARCH_BACK_TO_SEARCH=Back To Search
 SEARCH_BACK_TO_SEARCH=\u691c\u7d22\u306b\u623b\u308b
+#### SEARCH_BLOCK_HOST=Do you want to block search results from the host at
+#? SEARCH_BLOCK_HOST=
 
 #Media Types
 #### MEDIA_ANY_TYPE=Any Type
@@ -1298,7 +1300,6 @@ INIT_SAVE_DEFAULT_BUTTON_TIP=\u6a19\u6e96\u306e\u30d5\u30a9\u30eb\u30c0\u3092\u4
 PRO_TITLE=PRO \u306b\u30a2\u30c3\u30d7\u30b0\u30ec\u30fc\u30c9
 #### PRO_LABEL_THANKS=For TURBOcharged downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
 PRO_LABEL_THANKS=\u6700\u9069\u5316\u3055\u308c\u305f\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3092\u3059\u308b\u306b\u306f\u3001 LimeWire PRO \u3092\u8cfc\u5165\u3057\u3066\u304f\u3060\u3055\u3044\u3002 \u30d1\u30d5\u30a9\u30fc\u30de\u30f3\u30b9\u306e\u5411\u4e0a\u3092\u3001 \u6c17\u306b\u5165\u3063\u3066\u3044\u305f\u3060\u3051\u308b\u3053\u3068\u3092\u4fdd\u8a3c\u3057\u307e\u3059\u3002 LimeWire \u3092\u4f7f\u7528\u3059\u308b\u3053\u3068\u306b\u3088\u3063\u3066\u3001 \u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u306b\u8ca2\u732e\u3057\u3066\u4e0b\u3055\u3063\u3066\u3001 \u3042\u308a\u304c\u3068\u3046\u3054\u3056\u3044\u307e\u3059\u3002
-
 #### PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 PRO_LABEL_QUESTION=LimeWire PRO \u306b\u30a2\u30c3\u30d7\u30b0\u30ec\u30fc\u30c9\u3057\u307e\u3059\u304b\u3002
 #### GO_PRO_TIP=Get LimeWire PRO Now
@@ -1311,6 +1312,16 @@ WHYGOPRO_TIP=PRO \u306b\u3059\u308b\u3068\u4f55\u306e\u5229\u70b9\u304c\u3042\u3
 GO_PRO_LATER=\u5f8c\u3067
 #### GO_PRO_LATER_TIP=Get LimeWire PRO Later
 GO_PRO_LATER_TIP=LimeWire PRO \u3092\u5f8c\u3067\u8cfc\u5165\u3059\u308b
+
+################################################################################
+# Key/Value pairs for the upgrade java window.
+################################################################################
+#### JAVA_UPGRADE_TITLE=Upgrade Your Java
+#? JAVA_UPGRADE_TITLE=
+#### JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java.  LimeWire looks and acts much better with newer versions of Java.  Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
+#? JAVA_UPGRADE_MESSAGE=
+#### JAVA_UPGRADE_QUESTION=Would you like to get your free Java upgrade?
+#? JAVA_UPGRADE_QUESTION=
 
 ###################################################################
 # Key/value pairs for XML
@@ -1949,6 +1960,8 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=\u56fd
 # Key/value pairs for the save directory options window item
 # in the options window
 ################################################################################
+#### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings.  Would you like to save these changes?
+#? OPTIONS_SAVE_ON_CLOSE=
 #### OPTIONS_SAVE_DIR_TITLE=Save Directory
 OPTIONS_SAVE_DIR_TITLE=\u4fdd\u5b58\u5148\u30d5\u30a9\u30eb\u30c0
 #### OPTIONS_SAVE_DIR_LABEL=You can choose the directory for saving files.
