--- a/lib/messagebundles/MessagesBundle_tr.properties
+++ b/lib/messagebundles/MessagesBundle_tr.properties
@@ -647,6 +647,8 @@ AUTO_DL_CHECKBOX_TOOLTIP=LimeWire dosyalar\u0131n\u0131z\u0131 sizin i\u00e7in i
 #? SEARCH_FILTER_RESULTS=
 #### SEARCH_BACK_TO_SEARCH=Back To Search
 #? SEARCH_BACK_TO_SEARCH=
+#### SEARCH_BLOCK_HOST=Do you want to block search results from the host at
+#? SEARCH_BLOCK_HOST=
 
 #Media Types
 #### MEDIA_ANY_TYPE=Any Type
@@ -1298,7 +1300,6 @@ INIT_SAVE_DEFAULT_BUTTON_TIP=\u00d6ntan\u0131ml\u0131 dizini kullan\u0131r.
 PRO_TITLE=PRO'ya y\u00fckselt
 #### PRO_LABEL_THANKS=For TURBOcharged downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
 PRO_LABEL_THANKS=LimeWire kullanarak a\u011fa yard\u0131m etti\u011finiz i\u00e7in te\u015fekk\u00fcrler. LimeWire ve a\u011f\u0131 daha daiyi hale getirmek i\u00e7in l\u00fctfen LimeWire PRO'ya y\u00fckseltmeyi planlay\u0131n.
-
 #### PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 PRO_LABEL_QUESTION=LimeWire PRO'ya y\u00fckseltilsin mi?
 #### GO_PRO_TIP=Get LimeWire PRO Now
@@ -1311,6 +1312,16 @@ WHYGOPRO_TIP=PRO bana ne sa\u011flar?
 GO_PRO_LATER=Daha sonra
 #### GO_PRO_LATER_TIP=Get LimeWire PRO Later
 GO_PRO_LATER_TIP=LimeWire PRO'yu daha sonra \u0131ndirir.
+
+################################################################################
+# Key/Value pairs for the upgrade java window.
+################################################################################
+#### JAVA_UPGRADE_TITLE=Upgrade Your Java
+#? JAVA_UPGRADE_TITLE=
+#### JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java.  LimeWire looks and acts much better with newer versions of Java.  Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
+#? JAVA_UPGRADE_MESSAGE=
+#### JAVA_UPGRADE_QUESTION=Would you like to get your free Java upgrade?
+#? JAVA_UPGRADE_QUESTION=
 
 ###################################################################
 # Key/value pairs for XML
@@ -1949,6 +1960,8 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=\u00dclke
 # Key/value pairs for the save directory options window item
 # in the options window
 ################################################################################
+#### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings.  Would you like to save these changes?
+#? OPTIONS_SAVE_ON_CLOSE=
 #### OPTIONS_SAVE_DIR_TITLE=Save Directory
 OPTIONS_SAVE_DIR_TITLE=Kay\u0131t dizini
 #### OPTIONS_SAVE_DIR_LABEL=You can choose the directory for saving files.
