--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -647,6 +647,8 @@ SEARCH_WHATS_NEW_SMALL=\u062c\u062f\u064a\u062f
 #? SEARCH_FILTER_RESULTS=
 #### SEARCH_BACK_TO_SEARCH=Back To Search
 #? SEARCH_BACK_TO_SEARCH=
+#### SEARCH_BLOCK_HOST=Do you want to block search results from the host at
+#? SEARCH_BLOCK_HOST=
 
 #Media Types
 #### MEDIA_ANY_TYPE=Any Type
@@ -1298,7 +1300,6 @@ INIT_SAVE_DEFAULT_BUTTON_TIP=\u0627\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u
 PRO_TITLE=\u062a\u062d\u062f\u064a\u062b \u0625\u0644\u0649 PRO
 #### PRO_LABEL_THANKS=For TURBOcharged downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
 PRO_LABEL_THANKS=\u0644\u062a\u0646\u0632\u064a\u0644\u0627\u062a \u0633\u0631\u064a\u0639\u0629 \u0648\u0623\u0641\u0636\u0644\u060c \u0627\u062d\u0635\u0644 \u0639\u0644\u0649 LimeWire PRO. \u0646\u062d\u0646 \u0646\u0636\u0645\u0646 \u0644\u0643 \u0627\u0644\u0623\u062f\u0627\u0621 \u0627\u0644\u0623\u0641\u0636\u0644 \u0645\u0639 PRO. \u0634\u0643\u0631\u0627 \u0644\u0643 \u0644\u0625\u0628\u0642\u0627\u0626\u0643 \u0639\u0644\u0649 \u0641\u062a\u062d \u0627\u0644\u0625\u0646\u062a\u0631\u0646\u062a \u0628\u0627\u0633\u062a\u062e\u062f\u0627\u0645 LimeWire.
-
 #### PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 PRO_LABEL_QUESTION=\u0647\u0644 \u062a\u0631\u063a\u0628 \u0641\u064a \u0627\u0644\u062a\u062d\u062f\u064a\u062b \u0625\u0644\u0649 LimeWire PRO?
 #### GO_PRO_TIP=Get LimeWire PRO Now
@@ -1311,6 +1312,16 @@ WHYGOPRO_TIP=\u0645\u0627 \u0627\u0644\u062e\u062f\u0645\u0627\u062a \u0627\u064
 GO_PRO_LATER=\u0644\u0627\u062d\u0642\u0627
 #### GO_PRO_LATER_TIP=Get LimeWire PRO Later
 GO_PRO_LATER_TIP=\u0627\u0644\u062d\u0635\u0648\u0644 \u0639\u0644\u0649 LimeWire PRO \u0644\u0627\u062d\u0642\u0627.
+
+################################################################################
+# Key/Value pairs for the upgrade java window.
+################################################################################
+#### JAVA_UPGRADE_TITLE=Upgrade Your Java
+#? JAVA_UPGRADE_TITLE=
+#### JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java.  LimeWire looks and acts much better with newer versions of Java.  Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
+#? JAVA_UPGRADE_MESSAGE=
+#### JAVA_UPGRADE_QUESTION=Would you like to get your free Java upgrade?
+#? JAVA_UPGRADE_QUESTION=
 
 ###################################################################
 # Key/value pairs for XML
@@ -1949,6 +1960,8 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=\u0627\u0644\u0628\u0644\u062f
 # Key/value pairs for the save directory options window item
 # in the options window
 ################################################################################
+#### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings.  Would you like to save these changes?
+#? OPTIONS_SAVE_ON_CLOSE=
 #### OPTIONS_SAVE_DIR_TITLE=Save Directory
 OPTIONS_SAVE_DIR_TITLE=\u0645\u062c\u0644\u062f \u0627\u0644\u062d\u0641\u0638
 #### OPTIONS_SAVE_DIR_LABEL=You can choose the directory for saving files.
