--- a/lib/messagebundles/MessagesBundle_pl.properties
+++ b/lib/messagebundles/MessagesBundle_pl.properties
@@ -647,6 +647,8 @@ AUTO_DL_CHECKBOX_TOOLTIP=Automatyczne pobieranie plik\u00f3w przez LimeWire.
 #? SEARCH_FILTER_RESULTS=
 #### SEARCH_BACK_TO_SEARCH=Back To Search
 #? SEARCH_BACK_TO_SEARCH=
+#### SEARCH_BLOCK_HOST=Do you want to block search results from the host at
+#? SEARCH_BLOCK_HOST=
 
 #Media Types
 #### MEDIA_ANY_TYPE=Any Type
@@ -1298,7 +1300,6 @@ INIT_SAVE_DEFAULT_BUTTON_TIP=Spowoduje wybranie katalogu domy\u015blnego
 PRO_TITLE=Dokonaj upgrade-u do wersji PRO
 #### PRO_LABEL_THANKS=For TURBOcharged downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
 PRO_LABEL_THANKS=LimeWire to efekt ci\u0119\u017ckiej, dwuletniej pracy zespo\u0142u sk\u0142adaj\u0105cego si\u0119 z siedmiu programist\u00f3w. Je\u017celi korzystasz i doceniasz zalety LimeWire, prosimy Ci\u0119 o zakupienie wersji LimeWire PRO. Ka\u017cdy zakupiony egzemplarz wersji LimeWire PRO to wi\u0119ksza szansa na rozw\u00f3j pakietu w przysz\u0142o\u015bci.
-
 #### PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 PRO_LABEL_QUESTION=Upgradujemy do LimeWire PRO?
 #### GO_PRO_TIP=Get LimeWire PRO Now
@@ -1311,6 +1312,16 @@ WHYGOPRO_TIP=Co daje mi u\u017cywanie wersji PRO?
 GO_PRO_LATER=Innym razem
 #### GO_PRO_LATER_TIP=Get LimeWire PRO Later
 GO_PRO_LATER_TIP=Kupi\u0119 LimeWire PRO innym razem.
+
+################################################################################
+# Key/Value pairs for the upgrade java window.
+################################################################################
+#### JAVA_UPGRADE_TITLE=Upgrade Your Java
+#? JAVA_UPGRADE_TITLE=
+#### JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java.  LimeWire looks and acts much better with newer versions of Java.  Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
+#? JAVA_UPGRADE_MESSAGE=
+#### JAVA_UPGRADE_QUESTION=Would you like to get your free Java upgrade?
+#? JAVA_UPGRADE_QUESTION=
 
 ###################################################################
 # Key/value pairs for XML
@@ -1949,6 +1960,8 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Kraj
 # Key/value pairs for the save directory options window item
 # in the options window
 ################################################################################
+#### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings.  Would you like to save these changes?
+#? OPTIONS_SAVE_ON_CLOSE=
 #### OPTIONS_SAVE_DIR_TITLE=Save Directory
 OPTIONS_SAVE_DIR_TITLE=Wyb\u00f3r katalogu dla pobra\u0144
 #### OPTIONS_SAVE_DIR_LABEL=You can choose the directory for saving files.
