--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.1.19
+# Messages Bundle for LimeWire 4.1.11
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -648,7 +648,7 @@ SEARCH_FILTER_RESULTS=Filtrer les résultats\u00a0:
 #### SEARCH_BACK_TO_SEARCH=Back To Search
 SEARCH_BACK_TO_SEARCH=Retour à la recherche
 #### SEARCH_BLOCK_HOST=Do you want to block search results from the host at
-#? SEARCH_BLOCK_HOST=
+SEARCH_BLOCK_HOST=Voulez-vous bloquer les résultats de recherche en provenance de l'hôte à
 
 #Media Types
 #### MEDIA_ANY_TYPE=Any Type
@@ -837,9 +837,9 @@ STATISTICS_CONNECTION_QUALITY=Qualité\u00a0:
 #### STATISTICS_CONNECTION_IDLE=Idle
 STATISTICS_CONNECTION_IDLE=Inactif
 #### STATISTICS_CONNECTION_WAKING_UP=Waking Up
-#? STATISTICS_CONNECTION_WAKING_UP=
-#### STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
-#? STATISTICS_CONNECTION_WAKING_UP_TIP=
+STATISTICS_CONNECTION_WAKING_UP=Réveil...
+#### STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire est en cours de réactivation après une phase de sommeil.
+STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire est en cours de réactivation après une phase de sommeil.
 
 ################################################################################
 # Key/value pairs for the download window, including labels for the
@@ -1317,11 +1317,11 @@ GO_PRO_LATER_TIP=Acquérir LimeWire PRO plus tard.
 # Key/Value pairs for the upgrade java window.
 ################################################################################
 #### JAVA_UPGRADE_TITLE=Upgrade Your Java
-#? JAVA_UPGRADE_TITLE=
-#### JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java.  LimeWire looks and acts much better with newer versions of Java.  Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
-#? JAVA_UPGRADE_MESSAGE=
+JAVA_UPGRADE_TITLE=Mettez à jour votre Java
+#### JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java. LimeWire looks and acts much better with newer versions of Java. Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
+JAVA_UPGRADE_MESSAGE=LimeWire a détecté que vous utilisez une version dépassée de Java. LimeWire paraît et se comporte beaucoup mieux avec de nouvelles versions de Java. Ceci inclue des caractéristiques comme le support de la molette de défilement, une apparence Windows XP, un affichage plus rapide et plus stable, et bien d'autres améliorations de performance.
 #### JAVA_UPGRADE_QUESTION=Would you like to get your free Java upgrade?
-#? JAVA_UPGRADE_QUESTION=
+JAVA_UPGRADE_QUESTION=Voulez-vous obtenir votre mise à niveau gratuite de Java\u00a0?
 
 ###################################################################
 # Key/value pairs for XML
@@ -1742,6 +1742,8 @@ ERROR_INTERNAL_SERVLET_FAILED=LimeWire était incapable de se connecter au serveu
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
+#### ERROR_DAAP_LOOPBACK_FAILED=LimeWire was unable to start the Digital Audio Access Protocol (for sharing files in iTunes) because a Microsoft patch is required. LimeWire can direct you to Microsoft's page with information if you want to use this feature. Click 'Yes' to go to the patch, 'No' to disable this feature, or 'Cancel' to decide later.
+ERROR_DAAP_LOOPBACK_FAILED=LimeWire n'a pas pu démarrer le service de Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes) car un correctif Microsoft est nécessaire. LimeWire peut vous diriger vers la page d'informations de Microsoft si vous désirez utiliser cette fonctionalité. Cliquez sur "Oui" pour trouver le correctif, "Non" pour désactiver cette fonction, ou "Annuler" pour décider plus tard.
 #### ERROR_DAAP_START_FAILED=LimeWire was unable to start the Digital Audio Access Protocol Service (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
 ERROR_DAAP_START_FAILED=LimeWire n'a pas pu démarrer le service de Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes). Cette fonctionalité sera désactivée. Vous pouvez la rétablir dans les Options, sous iTunes -> Partage.
 #### ERROR_DAAP_RUN_ERROR=LimeWire encountered an error in the Digital Audio Access Protocol (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
@@ -1960,8 +1962,8 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Pays
 # Key/value pairs for the save directory options window item
 # in the options window
 ################################################################################
-#### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings.  Would you like to save these changes?
-#? OPTIONS_SAVE_ON_CLOSE=
+#### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings. Would you like to save these changes?
+OPTIONS_SAVE_ON_CLOSE=Vous avez effectué des changements à certaines de vos préférences. Voulez-vous les sauvegarder\u00a0?
 #### OPTIONS_SAVE_DIR_TITLE=Save Directory
 OPTIONS_SAVE_DIR_TITLE=Dossier de sauvegarde
 #### OPTIONS_SAVE_DIR_LABEL=You can choose the directory for saving files.
