update all resources.

--- a/lib/messagebundles/MessagesBundle_fi.properties
+++ b/lib/messagebundles/MessagesBundle_fi.properties
@@ -1318,7 +1318,7 @@ GO_PRO_LATER_TIP=Osta LimeWire PRO myöhemmin.
 ################################################################################
 #### JAVA_UPGRADE_TITLE=Upgrade Your Java
 #? JAVA_UPGRADE_TITLE=
-#### JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java.  LimeWire looks and acts much better with newer versions of Java.  Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
+#### JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java. LimeWire looks and acts much better with newer versions of Java. Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
 #? JAVA_UPGRADE_MESSAGE=
 #### JAVA_UPGRADE_QUESTION=Would you like to get your free Java upgrade?
 #? JAVA_UPGRADE_QUESTION=
@@ -1742,6 +1742,8 @@ ERROR_INTERNAL_SERVLET_FAILED=LimeWire ei saanut yhteyttä virhepalvelimeen lähet
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
+#### ERROR_DAAP_LOOPBACK_FAILED=LimeWire was unable to start the Digital Audio Access Protocol (for sharing files in iTunes) because a Microsoft patch is required. LimeWire can direct you to Microsoft's page with information if you want to use this feature. Click 'Yes' to go to the patch, 'No' to disable this feature, or 'Cancel' to decide later.
+#? ERROR_DAAP_LOOPBACK_FAILED=
 #### ERROR_DAAP_START_FAILED=LimeWire was unable to start the Digital Audio Access Protocol Service (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
 #? ERROR_DAAP_START_FAILED=
 #### ERROR_DAAP_RUN_ERROR=LimeWire encountered an error in the Digital Audio Access Protocol (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
@@ -1960,7 +1962,7 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Maa
 # Key/value pairs for the save directory options window item
 # in the options window
 ################################################################################
-#### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings.  Would you like to save these changes?
+#### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings. Would you like to save these changes?
 #? OPTIONS_SAVE_ON_CLOSE=
 #### OPTIONS_SAVE_DIR_TITLE=Save Directory
 OPTIONS_SAVE_DIR_TITLE=Tallennus hakemisto
