--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -838,7 +838,7 @@ STATISTICS_CONNECTION_QUALITY=Qualité\u00a0:
 STATISTICS_CONNECTION_IDLE=Inactif
 #### STATISTICS_CONNECTION_WAKING_UP=Waking Up
 STATISTICS_CONNECTION_WAKING_UP=Réveil...
-#### STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire est en cours de réactivation après une phase de sommeil.
+#### STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
 STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire est en cours de réactivation après une phase de sommeil.
 
 ################################################################################
