--- a/lib/messagebundles/totd/TOTD_fr.properties
+++ b/lib/messagebundles/totd/TOTD_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Tips of the Day for LimeWire 3.9.9
+# Tips of the Day for LimeWire 4.1.10
 # Default locale for: French - France
 # Maintained by the LimeWire project team.
 ################################################################################
@@ -41,6 +41,7 @@ GENERAL_32=Vous ne trouvez pas les fichiers que vous avez chargés\u00a0? Essayez
 GENERAL_33=Soyez à la mode Limewire\u00a0! Visitez notre page <a href="http://www.limewire.com/english/content/gear.shtml">boutique LimeWire</a> et achetez votre t-shirt ou casquette\u00a0!
 GENERAL_34=Vous souhaitez publier votre propre contenu\u00a0? <a href="http://www.magnetmix.com">MagnetMix de LimeWire</a> offre aux artistes indépendents, auteurs de jeux et partagiciels, distributeurs de logiciels et plus encore, le moyen d'atteindre de larges audiences. <a href="http://www.magnetmix.com/form.html">Soumettez votre contenu</a> aujourd'hui\u00a0!
 GENERAL_35=Essayez les recherches audio par genre!<br>Cliquez sur 'Audio' dans le panneau de méta-recherche, choisissez un genre dans le menu déroulant, et pressez Rechercher. La plupart des ficheirs retournés seront du genre sélectionné.
+GENERAL_36=Vous ne savez pas quoi chercher\u00a0? Essayez une recherche "Quoi de neuf\u00a0?" et voyez ce qui a été récemment ajouté au réseau.
 
 #####################################################################################
 # TIPS FOR NON-OSX Machines (Useful for tips that reference the About Window or the Preferences Window, or right-clicking)
@@ -58,6 +59,7 @@ NOT_OSX_10=Vous détestez les bulles d'aide\u00a0? Vous ne pouvez pas vous en pas
 NOT_OSX_11=Vous pouvez trier les transferts, chargements, etc... simplement avec un clic droit sur une colonne. La table est maintenue triée lorque les informations changent. Vous pouvez désactiver ce comportement de tri dynamique par un clic droit sur l'entête de colonne, en choisissant "Autres options" et décochant "Tri automatique".
 NOT_OSX_12=Vous pouvez modifier les colonnes d'informations sur les résultats de vos recherches. Ces colonnes incluent "Titre", "Genre", "Piste", "Longueur", et plus encore. Après un clic droit sur les entêtes de colonnes de résultat, choississez "audio" ou "vidéo", et activez les colonnes qui vous intéressent\u00a0!
 NOT_OSX_13=Vous ne voulez pas voir la colonne Discussion (ou d'autres) dans les chargements\u00a0? Après un clic droit sur les entêtes de colonnes, décochez cette colonne. Vous pouvez également glisser horizontalement les colonnes pour les faire apparaître dans l'ordre que vous souhaitez.
+NOT_OSX_14=Vous pouvez indiquer à LimeWire quel téléchargement démarrer d'abord. Cliquez avec le bouton droit sur les entêtes de colonne de la liste des téléchargements et cochez la colonne "Priorité". Sélectionnez le chargement que vous souhaiter commencer plus tôt et cliquez la flèche vers le haut pour amener le fichier en tête de liste\u00a0!
 
 #####################################################################################
 # TIPS FOR OSX
@@ -84,11 +86,6 @@ OSX_17=Vous ne voulez pas voir la colonne Discussion (ou d'autres) dans les char
 # TIPS FOR NON MAC CLASSIC (Useful for tips that reference Java2 specific features like Advanced Stats)
 #####################################################################################
 NOT_MAC_CLASSIC_1=Vous voulez des informations plus détaillées sur les travaux internes de LimeWire\u00a0? Vous pouvez consulter les mêmes statistiques qu'utilisent les développeurs\u00a0: par le menu Outils -> Statistiques, sélectionnez "Statistiques avancées", et cochez "Activer les statistiques avancées".
-
-#####################################################################################
-# TIPS FOR MAC CLASSIC
-#####################################################################################
-#MAC_CLASSIC_1=Merci pour votre support de LimeWire\u00a0!
 
 #####################################################################################
 # TIPS FOR WINDOWS
