--- a/lib/messagebundles/totd/TOTD_ja.properties
+++ b/lib/messagebundles/totd/TOTD_ja.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Tips of the Day for LimeWire 3.9.9
+# Tips of the Day for LimeWire 4.1.10
 # Default locale for: English - United States
 # Maintained by the LimeWire project team.
 ################################################################################
@@ -41,6 +41,7 @@ GENERAL_32=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u305f\u30d5\u30a1\u30a4\u3
 GENERAL_33=\u30e9\u30a4\u30e0\u30ef\u30a4\u30e4\u30fc\u30b0\u30c3\u30ba\u3092\u30b2\u30c3\u30c8\uff01\uff01<a href="http://www.limewire.com/english/content/gear.shtml">\u30e9\u30a4\u30e0\u30ef\u30a4\u30e4\u30fc\u30fb\u30b0\u30c3\u30ba</a>\u306e\u30a6\u30a7\u30d6\u30da\u30fc\u30b8\u3067\u306f\uff34\u30b7\u30e3\u30c4\u3084\u5e3d\u5b50\u3092\u8ca9\u58f2\u3057\u3066\u3044\u307e\u3059\u3002
 GENERAL_34=\u3054\u81ea\u5206\u306e\u30b3\u30f3\u30c6\u30f3\u30c4\u3092\u30cb\u30e5\u30fc\u30c6\u30e9\u3067\u51fa\u7248\u3057\u307e\u305b\u3093\u304b\uff1f\u30e9\u30a4\u30e0\u30ef\u30a4\u30e4\u30fc\u306e<a href="http://www.magnetmix.com">MagnetMix\uff08\u30de\u30b0\u30cd\u30c3\u30c8\u30fb\u30df\u30c3\u30af\u30b9\uff09</a>\u3067\u306f\u30a4\u30f3\u30c7\u30a3\u30fc\u306e\u30a2\u30fc\u30c1\u30b9\u30c8\u3001\u30b7\u30a7\u30a2\u30a6\u30a7\u30a2\u30fc\u306e\u30b2\u30fc\u30e0\u3084\u30bd\u30d5\u30c8\u306e\u51fa\u7248\u8005\u306a\u3069\u304c\u3088\u308a\u591a\u304f\u306e\u4eba\u306b\u77e5\u3063\u3066\u3082\u3089\u3046\u3053\uff54\u306e\u3067\u304d\u308b\u3088\u3046\u306b\u6210\u7acb\u3057\u307e\u3057\u305f\u3002\u30b3\u30f3\u30c6\u30f3\u30c4\u3092\u63d0\u51fa\u3059\u308b\u306b\u306f\u3001<a href="http://www.magnetmix.com/form.html">\u3053\u3061\u3089</a>\u3067\u3069\u3046\u305e\u3002 
 GENERAL_35=\u97f3\u697d\u30b8\u30e3\u30f3\u30eb\u691c\u7d22\u3092\u8a66\u3057\u3066\u307f\u3066\u304f\u3060\u3055\u3044\uff01\uff01<br>\u691c\u7d22\u30a6\u30a3\u30f3\u30c9\u30a6\u304b\u3089\u3001\u300c\u97f3\u697d\u300d\u3092\u9078\u629e\u3057\u3001GENRE/\u30b8\u30e3\u30f3\u30eb\u30e1\u30cb\u30e5\u30fc\u304b\u3089\u7279\u5b9a\u306e\u30b8\u30e3\u30f3\u30eb\u3092\u9078\u629e\u3057\u3001\u300c\u691c\u7d22\u300d\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u691c\u7d22\u7d50\u679c\u306e\u6b86\u3069\u304c\u9078\u629e\u3055\u308c\u305f\u30b8\u30e3\u30f3\u30eb\u306e\u30d5\u30a1\u30a4\u30eb\u3067\u3059\u3002
+#? GENERAL_36=Don't know what to look for? Try a "What's New" search and see what's recently been added to the network.
 
 #####################################################################################
 # TIPS FOR NON-OSX Machines (Useful for tips that reference the About Window or the Preferences Window)
@@ -58,6 +59,7 @@ NOT_OSX_10=\u30c4\u30fc\u30eb\u30c1\u30c3\u30d7\u3092\u8868\u793a\u3059\u308b\u3
 NOT_OSX_11=\u30c6\u30fc\u30d6\u30eb\u306e\u30b3\u30e9\u30e0\u30d8\u30c3\u30c0\u30fc\u3092\u30af\u30ea\u30c3\u30af\u3059\u308b\u3053\u3068\u306b\u3088\u308a\u3001\u4e26\u3073\u66ff\u3048\u3092\u3059\u308b\u3053\u3068\u304c\u51fa\u6765\u307e\u3059\u3002\u60c5\u5831\u304c\u5165\u3063\u3066\u304f\u308b\u306b\u3064\u308c\u3066\u81ea\u52d5\u7684\u306b\u4e26\u3073\u5909\u308f\u308a\u307e\u3059\u3002\u300c\u81ea\u52d5\u4e26\u3073\u66ff\u3048\u300d\u3092\u6709\u52b9\u30fb\u7121\u52b9\u306b\u306a\u308a\u305f\u3044\u306e\u3067\u3042\u308c\u3070\u3001\u30b3\u30e9\u30e0\u30d8\u30c3\u30c0\u30fc\u3092\u53f3\u30af\u30ea\u30c3\u30af\u3057\u3001\u300c\u4ed6\u306e\u30aa\u30d7\u30b7\u30e7\u30f3\u300d\u3067\u9078\u629e\u51fa\u6765\u307e\u3059\u3002
 NOT_OSX_12=\u691c\u7d22\u7d50\u679c\u3067\u8868\u793a\u3055\u308c\u308b\u30b3\u30e9\u30e0\u3092\u63db\u3048\u308b\u3053\u3068\u304c\u51fa\u6765\u307e\u3059\u3002\u300c\u66f2\u540d\u300d\u3001\u300c\u30b8\u30e3\u30f3\u30eb\u300d\u3001\u300c\u6642\u9593\u300d\u7b49\u3001\u591a\u6570\u306e\u30b3\u30e9\u30e0\u304b\u3089\u9078\u3076\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002\u30b3\u30e9\u30e0\u30fb\u30d8\u30c3\u30c0\u30fc\u3092\u53f3\u30af\u30ea\u30c3\u30af\u3059\u308b\u3053\u3068\u3067\u3053\u308c\u3089\u3092\u9078\u3076\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002
 NOT_OSX_13=\u300c\u4f1a\u8a71\u300d\u306a\u3069\u4ed6\u306e\u30b3\u30e9\u30e0\u3092\u691c\u7d22\u7d50\u679c\u306e\u30c6\u30fc\u30d6\u30eb\u3067\u8868\u793a\u3057\u305f\u304f\u306a\u3051\u308c\u3070\u3001\u30b3\u30e9\u30e0\u30fb\u30d8\u30c3\u30c0\u30fc\u3092\u53f3\u30af\u30ea\u30c3\u30af\u3057\u3001\u8868\u793a\u3055\u308c\u305f\u304f\u306a\u3044\u30b3\u30e9\u30e0\u3092\u9664\u5916\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u307e\u305f\u3001\u30b3\u30e9\u30e0\u3092\u30c9\u30e9\u30c3\u30b0\u3059\u308b\u3053\u3068\u306b\u3088\u3063\u3066\u9806\u756a\u3092\u66ff\u3048\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002
+#? NOT_OSX_14=You can tell LimeWire which downloads to start next. Right-click on the column headers in the download area and check the 'Priority' column. Select the download you want to start next and click the up arrow until it's at the top!
 
 #####################################################################################
 # TIPS FOR OSX
@@ -84,11 +86,6 @@ OSX_17=\u300c\u4f1a\u8a71\u300d\u306a\u3069\u4ed6\u306e\u30b3\u30e9\u30e0\u3092\
 # TIPS FOR NON MAC CLASSIC (Useful for tips that reference Java2 specific features like Advanced Stats)
 #####################################################################################
 NOT_MAC_CLASSIC_1=\u30e9\u30a4\u30e0\u30ef\u30a4\u30e4\u30fc\u306e\u5185\u90e8\u306e\u4ed5\u7d44\u307f\u3092\u3088\u308a\u3088\u304f\u8abf\u3079\u305f\u3044\u3067\u3059\u304b?\u3000\u958b\u767a\u8005\u3082\u4f7f\u7528\u3059\u308b\u7d2f\u8a08\u30c7\u30fc\u30bf\u306a\u3069\u3092\u300c\u6a5f\u80fd\u300d->\u300c\u7d2f\u8a08\u300d\u30e1\u30cb\u30e5\u30fc\u304b\u3089\u300c\u8a73\u7d30\u300d\u3092\u9078\u629e\u3059\u308b\u3053\u3068\u3067\u3054\u89a7\u306b\u306a\u308c\u307e\u3059\u3002
-
-#####################################################################################
-# TIPS FOR MAC CLASSIC
-#####################################################################################
-#MAC_CLASSIC_1=Thank you for supporting LimeWire!
 
 #####################################################################################
 # TIPS FOR WINDOWS
