--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -244,13 +244,13 @@ MENU_VIEW_LIBRARY_MNEMONIC=L
 MENU_VIEW_LIBRARY_ACCESSIBLE=Show Library Window
 MENU_VIEW_THEMES_TITLE=Apply Skins
 MENU_VIEW_THEMES_TITLE_MNEMONIC=A
-MENU_VIEW_THEMES_GET_MORE=Get more skins
+MENU_VIEW_THEMES_GET_MORE=Get More Skins
 MENU_VIEW_THEMES_GET_MORE_MNEMONIC=G
 MENU_VIEW_THEMES_GET_MORE_ACCESSIBLE=Find more skins from limewire.com
 MENU_VIEW_THEMES_REFRESH=Refresh Skins
 MENU_VIEW_THEMES_REFRESH_MNEMONIC=R
 MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=Reload available skins from disk
-MENU_VIEW_THEMES_USE_DEFAULT=Use default
+MENU_VIEW_THEMES_USE_DEFAULT=Use Default
 MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=D
 MENU_VIEW_THEMES_USE_DEFAULT_ACCESSIBLE=Use your default skin
 MENU_VIEW_LANGS_TITLE=Change Language
