Make to the new commented format

--- a/lib/messagebundles/MessagesBundle_pt_BR.properties
+++ b/lib/messagebundles/MessagesBundle_pt_BR.properties
@@ -32,14 +32,17 @@ LAYOUT_RIGHT_TO_LEFT=false
 HAS_TIPS_OF_THE_DAY=false
 
 ################################################################################
-# All other translated resources are missing. Look at the default English file.
 ################################################################################
+# TRANSLATIONS START BELOW.
+################################################################################
+################################################################################
+
 ################################################################################
 # To simplify management of these resources, all other localized definitions
 # are now found in the Standard Portuguese file "MessagesBundle_pt.properties",
 # as most of them were simply identical.
 # If you need a specialization for Brazilian, distinct from the Standard
 # European Pourtuguese localized file, you may just need to define the
-# Brazilian variants here, and keep the European variants in the standard
-# resource bundle.
+# Brazilian variants here, and keep the European variants in the Standard
+# Portuguese resources file.
 ################################################################################
