--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -398,7 +398,7 @@ MENU_VIEW_LIBRARY_ACCESSIBLE=\u0625\u0638\u0647\u0627\u0631 \u0646\u0627\u0641\u
 MENU_VIEW_THEMES_TITLE=(T) \u0625\u0636\u0627\u0641\u0629 \u0627\u0644\u0633\u0645\u0627\u062a
 #### MENU_VIEW_THEMES_TITLE_MNEMONIC=A
 MENU_VIEW_THEMES_TITLE_MNEMONIC=T
-#### MENU_VIEW_THEMES_GET_MORE=Get more skins
+#### MENU_VIEW_THEMES_GET_MORE=Get More Skins
 MENU_VIEW_THEMES_GET_MORE=(G) \u0627\u0644\u0645\u0632\u064a\u062f \u0645\u0646 \u0627\u0644\u0633\u0645\u0627\u062a
 #### MENU_VIEW_THEMES_GET_MORE_MNEMONIC=G
 MENU_VIEW_THEMES_GET_MORE_MNEMONIC=G
@@ -410,7 +410,7 @@ MENU_VIEW_THEMES_REFRESH=(R) \u062a\u062d\u062f\u064a\u062b \u0627\u0644\u0633\u
 MENU_VIEW_THEMES_REFRESH_MNEMONIC=R
 #### MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=Reload available skins from disk
 MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=\u0625\u0639\u0627\u062f\u0629 \u062a\u062d\u0645\u064a\u0644 \u0627\u0644\u0633\u0645\u0627\u062a \u0627\u0644\u0645\u062a\u0627\u062d\u0629 \u0645\u0646 \u0627\u0644\u0642\u0631\u0635.
-#### MENU_VIEW_THEMES_USE_DEFAULT=Use default
+#### MENU_VIEW_THEMES_USE_DEFAULT=Use Default
 MENU_VIEW_THEMES_USE_DEFAULT=(D) \u0627\u0633\u062a\u0639\u0627\u062f\u0629 \u0627\u0644\u0627\u0641\u062a\u0631\u0627\u0636\u064a\u0627\u062a
 #### MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=D
 MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=D
@@ -1742,8 +1742,10 @@ ERROR_INTERNAL_SERVLET_FAILED=\u0644\u0645 \u064a\u062a\u0645\u0643\u0646 LimeWi
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
-#### ERROR_DAAP_LOOPBACK_FAILED=LimeWire was unable to start the Digital Audio Access Protocol (for sharing files in iTunes) because a Microsoft patch is required. LimeWire can direct you to Microsoft's page with information if you want to use this feature. Click 'Yes' to go to the patch, 'No' to disable this feature, or 'Cancel' to decide later.
+#### ERROR_DAAP_LOOPBACK_FAILED=LimeWire was unable to start the Digital Audio Access Protocol (for sharing files in iTunes) because a Microsoft patch is required or a firewall is blocking access. LimeWire can direct you to Microsoft's page with information if you want to use this feature. Click 'Yes' to go to the patch, 'No' to disable this feature, or 'Cancel' to decide later.
 #? ERROR_DAAP_LOOPBACK_FAILED=
+#### ERROR_DAAP_LOOPBACK_FAILED_NONXP=LimeWire was unable to start the Digital Audio Access Protocol (for sharing files in iTunes) because a firewall is blocking access. To continue using this feature, click 'Yes' and change your firewall allow 'LimeWire.exe' full access to incoming and outgoing connections. To disable this feature, click 'No'.
+#? ERROR_DAAP_LOOPBACK_FAILED_NONXP=
 #### ERROR_DAAP_START_FAILED=LimeWire was unable to start the Digital Audio Access Protocol Service (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
 #? ERROR_DAAP_START_FAILED=
 #### ERROR_DAAP_RUN_ERROR=LimeWire encountered an error in the Digital Audio Access Protocol (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
