--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -398,7 +398,7 @@ MENU_VIEW_LIBRARY_ACCESSIBLE=Affiche l'écran de la médiathèque et la liste de le
 MENU_VIEW_THEMES_TITLE=Appliquer un thème
 #### MENU_VIEW_THEMES_TITLE_MNEMONIC=A
 MENU_VIEW_THEMES_TITLE_MNEMONIC=T
-#### MENU_VIEW_THEMES_GET_MORE=Get more skins
+#### MENU_VIEW_THEMES_GET_MORE=Get More Skins
 MENU_VIEW_THEMES_GET_MORE=Obtenir d'autres thèmes...
 #### MENU_VIEW_THEMES_GET_MORE_MNEMONIC=G
 MENU_VIEW_THEMES_GET_MORE_MNEMONIC=O
@@ -410,7 +410,7 @@ MENU_VIEW_THEMES_REFRESH=Actualiser la liste
 MENU_VIEW_THEMES_REFRESH_MNEMONIC=R
 #### MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=Reload available skins from disk
 MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=Recharge les thèmes disponibles sur le disque.
-#### MENU_VIEW_THEMES_USE_DEFAULT=Use default
+#### MENU_VIEW_THEMES_USE_DEFAULT=Use Default
 MENU_VIEW_THEMES_USE_DEFAULT=Thème par défaut
 #### MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=D
 MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=D
@@ -1742,8 +1742,10 @@ ERROR_INTERNAL_SERVLET_FAILED=LimeWire était incapable de se connecter au serveu
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
-#### ERROR_DAAP_LOOPBACK_FAILED=LimeWire was unable to start the Digital Audio Access Protocol (for sharing files in iTunes) because a Microsoft patch is required. LimeWire can direct you to Microsoft's page with information if you want to use this feature. Click 'Yes' to go to the patch, 'No' to disable this feature, or 'Cancel' to decide later.
-ERROR_DAAP_LOOPBACK_FAILED=LimeWire n'a pas pu démarrer le service de Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes) car un correctif Microsoft est nécessaire. LimeWire peut vous diriger vers la page d'informations de Microsoft si vous désirez utiliser cette fonctionalité. Cliquez sur "Oui" pour trouver le correctif, "Non" pour désactiver cette fonction, ou "Annuler" pour décider plus tard.
+#### ERROR_DAAP_LOOPBACK_FAILED=LimeWire was unable to start the Digital Audio Access Protocol (for sharing files in iTunes) because a Microsoft patch is required or a firewall is blocking access. LimeWire can direct you to Microsoft's page with information if you want to use this feature. Click 'Yes' to go to the patch, 'No' to disable this feature, or 'Cancel' to decide later.
+ERROR_DAAP_LOOPBACK_FAILED=LimeWire n'a pas pu démarrer le service de Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes) car un correctif Microsoft est nécessaire, ou un pare-feu en bloque l'accès. LimeWire peut vous diriger vers la page d'informations de Microsoft si vous désirez utiliser cette fonctionalité. Cliquez sur "Oui" pour trouver le correctif, "Non" pour désactiver cette fonction, ou "Annuler" pour décider plus tard.
+#### ERROR_DAAP_LOOPBACK_FAILED_NONXP=LimeWire was unable to start the Digital Audio Access Protocol (for sharing files in iTunes) because a firewall is blocking access. To continue using this feature, click 'Yes' and change your firewall allow 'LimeWire.exe' full access to incoming and outgoing connections. To disable this feature, click 'No'.
+ERROR_DAAP_LOOPBACK_FAILED_NONXP=LimeWire n'a pas pu démarrer le service de Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes) car un pare-feu en bloque l'accès. Pour continuer à utiliser cette fonctionalité, Cliquez sur "Oui" et modifiez votre pare-feu afin d'autoriser l'accès complet pour l'application "LimeWire.exe" aux connexions entrantes et sortantes. Cliquez sur "Non" pour désactiver le support de DAAP.
 #### ERROR_DAAP_START_FAILED=LimeWire was unable to start the Digital Audio Access Protocol Service (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
 ERROR_DAAP_START_FAILED=LimeWire n'a pas pu démarrer le service de Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes). Cette fonctionalité sera désactivée. Vous pouvez la rétablir dans les Options, sous iTunes -> Partage.
 #### ERROR_DAAP_RUN_ERROR=LimeWire encountered an error in the Digital Audio Access Protocol (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
