Change primarily for adding support for icons in column headers.
Also fixes:
- AboutWindow's content (adding Katie, removing others, and
  synchronizing across locales).
- Jens-Uwe Mager's patch for disabling two recently-added
  message boxes.
- Fixed some improper capitalization in the menu.
- Removed superfluous ellipses in the menu.
- Properly capitalized "LimeWire PRO" in some TOTD items.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -244,13 +244,13 @@ MENU_VIEW_LIBRARY_MNEMONIC=L
 MENU_VIEW_LIBRARY_ACCESSIBLE=Show Library Window
 MENU_VIEW_THEMES_TITLE=Apply Skins
 MENU_VIEW_THEMES_TITLE_MNEMONIC=A
-MENU_VIEW_THEMES_GET_MORE=Get more skins
+MENU_VIEW_THEMES_GET_MORE=Get More Skins
 MENU_VIEW_THEMES_GET_MORE_MNEMONIC=G
 MENU_VIEW_THEMES_GET_MORE_ACCESSIBLE=Find more skins from limewire.com
 MENU_VIEW_THEMES_REFRESH=Refresh Skins
 MENU_VIEW_THEMES_REFRESH_MNEMONIC=R
 MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=Reload available skins from disk
-MENU_VIEW_THEMES_USE_DEFAULT=Use default
+MENU_VIEW_THEMES_USE_DEFAULT=Use Default
 MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=D
 MENU_VIEW_THEMES_USE_DEFAULT_ACCESSIBLE=Use your default skin
 MENU_VIEW_LANGS_TITLE=Change Language
@@ -277,10 +277,10 @@ MENU_RESOURCES_PRO_ACCESSIBLE=Display the LimeWire PRO Website
 
 MENU_TOOLS_TITLE=Tools
 MENU_TOOLS_TITLE_MNEMONIC=T
-MENU_TOOLS_STATISTICS=Statistics...
+MENU_TOOLS_STATISTICS=Statistics
 MENU_TOOLS_STATISTICS_MNEMONIC=S
 MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
-MENU_TOOLS_OPTIONS=Options...
+MENU_TOOLS_OPTIONS=Options
 MENU_TOOLS_OPTIONS_MNEMONIC=O
 MENU_TOOLS_OPTIONS_ACCESSIBLE=Display the Options Screen
 
@@ -304,7 +304,7 @@ MENU_HELP_FRIEND_ACCESSIBLE=Tell a Friend about LimeWire
 MENU_HELP_REVIEW=Review LimeWire
 MENU_HELP_REVIEW_MNEMONIC=R
 MENU_HELP_REVIEW_ACCESSIBLE=Submit a Review of LimeWire
-MENU_HELP_ABOUT=About...
+MENU_HELP_ABOUT=About LimeWire
 MENU_HELP_ABOUT_MNEMONIC=A
 MENU_HELP_ABOUT_ACCESSIBLE=Information about LimeWire
 MENU_HELP_ERROR=Generate Error
