Play list "Save..." button -> "Save As...", since its functionality is Save As

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -433,8 +433,8 @@ LIBRARY_RESUME_BUTTON_TIP=Continue downloading selected incomplete file
 
 PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_TIP=Open a new or existing PlayList
-PLAYLIST_SAVE_BUTTON_LABEL=Save...
-PLAYLIST_SAVE_BUTTON_TIP=Save the current PlayList
+PLAYLIST_SAVE_BUTTON_LABEL=Save As...
+PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
 PLAYLIST_DELETE_BUTTON_LABEL=Remove
 PLAYLIST_DELETE_BUTTON_TIP=Remove selected file from PlayList
 PLAYLIST_FILE_DESCRIPTION=PlayList Files (*.m3u)
