Remove this dot: not the end of a sentence, which continues by a variable filename and in another resource starting by the end-of-sentence dot.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -680,7 +680,7 @@ PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
 PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
 PLAYLIST_DIALOG_SAVE_SAVE=Save
-PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file.
+PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 PLAYLIST_LINE_UNAVAILABLE=. No line is available for output.
 PLAYLIST_FILE_MISSING=. The file cannot be found.
